<resources>
    <string name="app_name">SportTracker</string>
    <string name="title_health">Здоровье</string>
    <string name="title_exercises">Упражнения</string>
    <string name="title_me">Я</string>
    <string name="exercises">Упражнение</string>
    <string name="date">Дата</string>
    <string name="comment">Комментарий</string>
    <string name="distance">Дистанция</string>
    <string name="duration">Продолжительность</string>
    <string name="time">Время</string>
    <string name="title_add_exercise_record">Добавление записи</string>
    <string name="ok">Ок</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="back">Назад</string>
    <string name="choose_exercise">Выбирите упражнение</string>
    <string name="choose_date">Укажите дату</string>
    <string name="choose_distance">Укажите дистанцию</string>
    <string name="choose_duration">Укажите продолжительность</string>
    <string name="choose_weight">Укажите вес</string>
    <string name="add_record">Добавить запись</string>
    <string name="history">История</string>
    <string name="statistics">Статистика</string>
    <string name="profile">Профиль</string>
    <string name="goals">Цели</string>
    <string name="set_goal"><u>Настроить цель</u></string>
    <string name="preferences">Настройки</string>
    <string name="about">О приложении</string>
    <string name="arrow">Стрелка</string>
    <string name="sex">Пол</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="sex_default_value">Не указан</string>
    <string name="date_of_birth_default_value">01.08.1990</string>
    <string name="height_default_value">170</string>
    <string name="weight_default_value">60</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="calories">Калории</string>
    <string name="delete_question">Вы уверены, что хотите удалить запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="id">id</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="all">Всего</string>
    <string name="all_distance">Общая дистанция</string>
    <string name="all_calories">Всего калорий</string>
    <string name="all_duration">Общая продолжительность</string>
    <string name="steps">Шаги</string>
    <string name="meters_abbreviation">м</string>
    <string name="santimeters_abbreviation">см</string>
    <string name="kilometers_abbreviation">км</string>
    <string name="minutes_abbreviation">мин</string>
    <string name="calories_abbreviation">ккал</string>
    <string name="kilogram_abbreviation">кг</string>
    <string name="start">Начало: </string>
    <string name="goal">Цель: </string>
    <string name="period_change">Изменение за период</string>
    <string name="navigation_settings_question">Средства определения местоположения недоступны.
        Перейти в настройки для их включения?</string>
    <string name="end_exercise_question">Вы уверены, что хотите завершить упражнение?</string>
    <string name="end_exercise_little_distance_question">Дистанция слишком мала. Вы уверены,
        что хотите завершить упражнение?</string>
    <string name="steps_notify_abbreviation_1">Шаг</string>
    <string name="steps_notify_abbreviation_2">Шага</string>
    <string name="steps_notify_abbreviation_3">Шагов</string>
    <string name="average_in_month">в среднем в день за месяц</string>
    <string name="all_steps">Всего шагов</string>
    <string name="recommendations">Рекомендации</string>
    <string name="general_recommendations">Общие рекомендации</string>

    <string name="wos_groups_description">В соответствии с рекомендациями ВОЗ, для определения
        рекомендуемого уровня физичской активности принято выделять три возростные группы:\n
        1. до 17 лет;\n2. от 18 до 64 лет;\n3. 65 лет и старше.\n</string>

    <string name="wos_group_1_recommendation">Для укрепления сердечно-сосудистой системы,
        скелетно-мышечных тканей и снижения риска неинфекционных заболеваний рекомендуется
        следующая практика физической активности:\n1. Люди Вашей возрастной группы
        должны заниматься ежедневно физической активностью от умеренной
        до высокой интенсивности, в общей сложности, не менее 60 минут.\n2. Физическая
        активность продолжительностью более 60 минут в день принесет дополнительную пользу для
        Вашего здоровья.\n3. Большая часть ежедневной физической активности должна приходиться на
        аэробику. Физическая активность высокой интенсивности, включая упражнения по развитию
        скелетно-мышечных тканей, должна проводиться, как минимум, три раза в неделю.\n</string>

    <string name="wos_group_2_recommendation">Для укрепления сердечно-сосудистой системы,
        скелетно-мышечных тканей и снижения риска неинфекционных заболеваний рекомендуется
        следующая практика физической активности:\n1. Люди Вашей возрастной группы должны
        уделять не менее 150 минут в неделю занятиям аэробикой средней интенсивности, или не
        менее 75 минут в неделю занятиям аэробикой высокой интенсивности, или аналогичному
        сочетанию физической активности средней и высокой интенсивности.\n2. Каждое занятие
        аэробикой должно продолжаться не менее 10 минут.\n3. Для того чтобы получить
        дополнительные преимущества для здоровья, люди этой возрастной категории должны
        увеличить нагрузки своих занятий аэробикой средней интенсивности до 300 минут в неделю,
        или до 150 минут в неделю, если занимаются аэробикой высокой интенсивности, или
        аналогичное сочетание занятий аэробикой средней и высокой интенсивности.\n4. Силовым
        упражнениям, где задействованы основные группы мышц, следует посвящать 2 или более
        дней в неделю.\n</string>

    <string name="wos_group_3_recommendation">В целях укрепления сердечно-легочной системы,
        костно-мышечных тканей, функционального состояния и снижения риска неинфекционных
        заболеваний, депрессии и нарушения когнитивных функций рекомендуется следующая практика
        физической активности:\n1. Люди Вашей возрастной группы должны уделять не
        менее 150 минут в неделю занятиям аэробикой средней интенсивности, или не менее
        75 минут в неделю занятиям аэробикой высокой интенсивности, или аналогичной физической
        активности средней и высокой интенсивности.\n2. Каждое занятие аэробикой должно
        продолжаться не менее 10 минут.\n3. Для того чтобы получить дополнительные преимущества
        для здоровья, люди этой возрастной категории должны увеличить нагрузки своих занятий
        аэробикой средней интенсивности до 300 минут в неделю, или до 150 минут в неделю, если
        занимаются аэробикой высокой интенсивности, или аналогичное сочетание занятий аэробикой
        средней и высокой интенсивности.\n4. Взрослые люди этой возрастной категории с проблемами
        суставов должны выполнять упражнения на равновесие, предотвращающие риск падений, 3
        или более дней в неделю.\n5. Силовым упражнениям, где задействованы основные группы
        мышц, следует посвящать 2 или более дней в неделю.\n6. Если пожилые люди по состоянию
        своего здоровья не могут выполнять рекомендуемый объем физической активности, то они
        должны заниматься физическими упражнениями с учетом своих физических возможностей и
        состояния здоровья.\n</string>

    <string name="wos_groups_description_end">В целом, преимущества выполнения вышеуказанных
        рекомендаций, включая сам факт физических упражнений, превосходят недостатки. При
        рекомендуемом уровне физической активности средней интенсивности в объеме 150 минут в
        неделю практически не бывает травм опорно-двигательного аппарата. При подходе,
        ориентированном на разные группы населения, представляется целесообразным начинать
        с занятий средней интенсивности с постепенным увеличением нагрузок до более высоких
        уровней физической активности.</string>
</resources>
