<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_health">

    <fragment
        android:id="@+id/navigation_health"
        android:name="com.example.sporttracker.Views.health.HealthFragment"
        android:label="@string/title_health"
        tools:layout="@layout/fragment_health" />

    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.example.sporttracker.Views.exercise.ExerciseFragment"
        android:label="@string/title_exercises"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.example.sporttracker.Views.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>